--- a/index-START.html
+++ b/index-START.html
@@ -22,7 +22,41 @@
       fetch(endpoint)
         .then(blob => blob.json())
         .then(data => cities.push(...data))
+      
+      function findMatches(wordToMatch, cities) {
+        return cities.filter(place => {
+          // here we need to figure out if the city or state matches what was searched
+          const regex = new RegExp(wordToMatch, 'gi');
+          return place.city.match(regex) || place.state.match(regex)
+        });
+      }
+
+      function displayMatches() {
+        const matchArray = findMatches(this.value, cities);
+        console.log(matchArray);
+      }
+
+      const searchInput = document.querySelector('.search');
+      const suggestions = document.querySelector('.suggestions');
+
+      searchInput.addEventListener('change', displayMatches);
+      searchInput.addEventListener('keyup', displayMatches);
+
 
     </script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
