--- a/index-START.html
+++ b/index-START.html
@@ -21,26 +21,43 @@
 
       fetch(endpoint)
         .then(blob => blob.json())
-        .then(data => cities.push(...data))
-      
+        .then(data => cities.push(...data));
+
       function findMatches(wordToMatch, cities) {
         return cities.filter(place => {
           // here we need to figure out if the city or state matches what was searched
           const regex = new RegExp(wordToMatch, 'gi');
-          return place.city.match(regex) || place.state.match(regex)
+          return place.city.match(regex) || place.state.match(regex);
         });
+      }
+
+      function numberWithCommas(x) {
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
       }
 
       function displayMatches() {
         const matchArray = findMatches(this.value, cities);
-        const html = matchArray.map(place => {
-          return `
+        const html = matchArray
+          .map(place => {
+            const regex = new RegExp(this.value, 'gi');
+            const cityName = place.city.replace(
+              regex,
+              `<span class="h1">${this.value}</span>`
+            );
+            const stateName = place.state.replace(
+              regex,
+              `<span class="h1">${this.value}</span>`
+            );
+            return `
             <li>
-              <span class="name">${place.city}, ${place.state}</span>
-              <span class="population">${place.population}</span>
+              <span class="name">${cityName}, ${stateName}</span>
+              <span class="population">${numberWithCommas(
+                place.population
+              )}</span>
             </li>
           `;
-        }).join('');
+          })
+          .join('');
         suggestions.innerHTML = html;
       }
 
@@ -49,22 +66,6 @@
 
       searchInput.addEventListener('change', displayMatches);
       searchInput.addEventListener('keyup', displayMatches);
-
-
     </script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
